--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,8 @@
 $primary: darken(#428bca, 20%);
 
 @import "~bootstrap/scss/bootstrap";
+
+.logoTopLeft{
+    margin: auto;
+    padding-left:25%;
+}
