--- a/templates/reponse_enigme_un/index.html.twig
+++ b/templates/reponse_enigme_un/index.html.twig
@@ -2,20 +2,23 @@
 
 {% block title %}Hello ReponseEnigmeUnController!{% endblock %}
 
+{#{% block stylesheets %} {{ encore_entry_link_tags('app') }}#}
+{#{% endblock %}#}
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{#<style>#}
+{#    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }#}
+{#    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }#}
+{#</style>#}
 
     <div class="Enigme">
         <h1>
-            Titre enigme omg
+            Mathématiques
         </h1>
         <p>
-            Enigme blabalbalbalalbabla
+            Combien font 1+1 ?
         </p>
     </div>
+    <img class="logoTopLeft" src="{{ asset('images/logoSVG.svg') }}" alt="logo">
     {{form_start(reponseForm)}}
     {{ form_row(reponseForm.Reponse) }}
     <button type="submit" class="btn">Envoyer</button>
