--- a/templates/reponse_enigme_un/index.html.twig
+++ b/templates/reponse_enigme_un/index.html.twig
@@ -9,18 +9,19 @@
 {#    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }#}
 {#    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }#}
 {#</style>#}
+    <div class="enigmeDiv">
 
-    <div class="Enigme">
-        <h1>
+        <h1 class="titreEnigme">
             Mathématiques
         </h1>
-        <p>
+        <p class="enonceEnigme">
             Combien font 1+1 ?
         </p>
-    </div>
-    <img class="logoTopLeft" src="{{ asset('images/logoSVG.svg') }}" alt="logo">
+
     {{form_start(reponseForm)}}
     {{ form_row(reponseForm.Reponse) }}
-    <button type="submit" class="btn">Envoyer</button>
+    <button type="submit" class="envoyerBouton">Envoyer</button>
     {{ form_end(reponseForm) }}
+
+    </div>
 {% endblock %}
