--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,15 +2,20 @@ $primary: darken(#428bca, 20%);
 
 @import "~bootstrap/scss/bootstrap";
 
-
+@font-face {
+    font-family: nordicFont;
+    src: url("/assets/polices/nordicalt.ttf");
+}
 
 .titreHeader{
-    font-size: 25px;
+    font-size: 35px;
     font-weight: bold;
     color: white;
     text-align: center;
-    position:relative;
-    margin-right:47vw
+    position:absolute;
+    margin-right:auto;
+    margin-left:auto;
+    font-family: nordicFont, sans-serif;
 
 }
 
