--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                     <a class="navbar-brand" href="#">
                         <img class="imageLogo " src="{{ asset('images/LogoSansNom.svg') }}" alt="Logo" height="50px">
                     </a>
-                    <p class="titreHeader">Enigmatica</p>
+                    <p class="titreHeader">ENIGMATICA</p>
 
 
             </nav>
