--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -101,3 +101,12 @@ background-color: #999999;
     opacity: 1;
     //height:110%;
 }
+
+.registerDiv{
+    margin: 10vh 25vw;
+    //background-color: #50515a;
+    background-color: #d9d9d9;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 1px 2px #232428;
+}
