Ajouts mineurs corrections front et un peu back

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
         </header>
         <div class="figure">
         <img class="imageAssistante" src="{{ asset('images/assistante2.svg') }}" alt="assistante" height="300px">
-        <img class="imageAssistanteIdee" src="{{ asset('images/assistanteIdee.svg') }}" alt="assistante" height="300px">
+        <img id="assistanteIdee" class="imageAssistanteIdee" src="{{ asset('images/assistanteIdee.svg') }}" alt="assistante" height="300px">
         </div>
 
 
