--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -12,7 +12,7 @@
     {{ form_row(registrationForm.password, {
         label: 'Password'
     }) }}
-    <button type="submit" class="btn">Register</button>
+    <button type="submit" class="registerBtn">Register</button>
 
     {{ form_end(registrationForm) }}
 </div>
