--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,8 +13,11 @@ $primary: darken(#428bca, 20%);
     color: white;
     text-align: center;
     position:absolute;
-    margin-right:auto;
-    margin-left:auto;
+    //margin-right:auto;
+    //margin-left:auto;
+    margin-left:44vw;
+    margin-right:50vw;
+    margin-top:15px;
     font-family: nordicFont, sans-serif;
 
 }
@@ -99,6 +102,7 @@ background-color: #999999;
 }
 .figure:hover img.imageAssistanteIdee{
     opacity: 1;
+    cursor:pointer;
     //height:110%;
 }
 
@@ -109,4 +113,31 @@ background-color: #999999;
     border-radius: 10px;
     padding: 10px;
     box-shadow: 0 1px 2px #232428;
+}
+
+.registerBtn{
+    background-color: #999999;
+    color: #232428;
+    border: 1px solid #232428;
+    border-radius: 5px;
+    box-shadow: 0 1px 2px #232428;
+    width:50%;
+    margin-left:25%;
+    margin-top: 10px;
+}
+.registerBtn:hover{
+    background-color: #333438;
+    color: #999999;
+}
+
+.resultatEnigme{
+    margin: 10vh 25vw;
+    //background-color: #50515a;
+    background-color: #d9d9d9;
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px solid #232428;
+    //box-shadow: 0 1px 2px #232428;
+    //opacity:0;
+    text-align:center;
 }
