--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
         <header>
             <nav class="navbar">
 
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="{{ path('app_reponse_enigme_un') }}">
                         <img class="imageLogo " src="{{ asset('images/LogoSansNom.svg') }}" alt="Logo" height="50px">
                     </a>
                     <p class="titreHeader">ENIGMATICA</p>
