--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -175,8 +175,8 @@ background-color: #999999;
     text-align:center;
 }
 
-p span {opacity:0;}
-h1 span{opacity:0;}
+.enonceEnigme span {opacity:0;}
+.titreEnigme span{opacity:0;}
 .lettre1 {animation:letters 2s ease 0000ms forwards;animation-delay:3s;}
 .lettre2 {animation:letters 2s ease 0100ms forwards;animation-delay:3s;}
 .lettre3 {animation:letters 2s ease 0200ms forwards;animation-delay:3s;}
@@ -204,9 +204,9 @@ h1 span{opacity:0;}
     100% {opacity:1.0;}
 }
 
-h1::after {content:""; display:block; background:linear-gradient(45deg, #F9CFF3,#D4B6DB,#E5D6F2,#C0B6DB,#CFCFF9); height:3px; width:0%; opacity:0; margin-top:.2em; animation:lineWidth 3s ease-in-out forwards; animation-delay:3s;}
+.titreEnigme::after {content:""; display:block; background:linear-gradient(45deg, #F9CFF3,#D4B6DB,#E5D6F2,#C0B6DB,#CFCFF9); height:3px; width:0; opacity:0; margin-top:.2em; animation:lineWidth 3s ease-in-out forwards; animation-delay:3s;}
 @keyframes lineWidth {
-    0% {width:0%; opacity:0;}
+    0% {width:0; opacity:0;}
     100% {width:100%; opacity:1.0;}
 }
 
@@ -235,7 +235,7 @@ h1::after {content:""; display:block; background:linear-gradient(45deg, #F9CFF3,
         url('../../public/images/indexFONDCOULEUR.gif');
         //url('../../public/images/index4.gif');
     background-repeat: no-repeat;
-    background-size: 0 2px, 0 100%, 0% 2px;
+    background-size: 0 2px, 0 100%, 0 2px;
     background-position: top center, top center, bottom center;
     -webkit-animation: drawBorderFromCenter 4s;
 }
@@ -256,9 +256,121 @@ h1::after {content:""; display:block; background:linear-gradient(45deg, #F9CFF3,
     }
 }
 
-//.enigmeDiv
-//{
-//    background-color: #d9d9d9;
-//    padding: 2em;
-//    text-align: center;
-//}
+
+
+
+
+//HOMEPAGE
+.main-content {
+    overflow:hidden;
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+
+    height: 100vh;
+
+    background: linear-gradient(to right, rgba(36,31,31,1) 0%, rgba(36,31,31,1) 32%, rgba(74,71,70,1) 100%);
+    color: #fff;
+    text-align: center;
+}
+
+.vignette{
+    z-index:1;
+    position:absolute;
+    width:100%; height:100%;
+    box-shadow:inset 0 0 150px 20px black;
+    mix-blend-mode: multiply;
+    -webkit-animation: vignette-anim 3s infinite; /* Safari 4+ */
+    -moz-animation:    vignette-anim 3s infinite; /* Fx 5+ */
+    -o-animation:      vignette-anim 3s infinite; /* Opera 12+ */
+    animation:         vignette-anim 3s infinite; /* IE 10+, Fx 29+ */
+}
+
+.noise {
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    //pointer-events: none;
+    opacity: .15;
+}
+
+.line{
+    position:absolute;
+    height:100%; width:1px;
+    opacity:0.1;
+    background-color:#000;
+}
+
+.titleCont{position:relative;}
+
+.main-title {
+    padding: .3em 1em .25em;
+    font-weight: 400;
+    font-size: 40px;
+    color: white;
+    font-family: 'Bellefair', serif;
+    position:relative;
+    line-height:1.3;
+    //white-space:change-color(white,black,0.5);
+    //white-spacing: change-color(white, black, 0.5);
+
+}
+
+.overTitle{
+    position:absolute;
+    top:0;
+    left:0;
+}
+
+.dot{
+    width:3px;
+    height:2px;
+    background-color:white;
+    position:absolute;
+    opacity:0.3;
+}
+
+
+@-webkit-keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+}
+@-moz-keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+}
+@-o-keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+}
+@keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+}
+
+.divBtn{
+ z-index:2;
+}
+.btnOui2, .btnNon2, .btnCaché{
+    display:none;
+}
+.btnCaché{
+    position:absolute;
+    top:42%;
+    left:69%;
+    width:5%;
+    height:5%;
+    background-color:transparent;
+    z-index:2;
+    /*cacher le bouton mais cliquer dessus*/
+    opacity: 0;
+
+}
