--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -17,7 +17,7 @@
         <input type="hidden" name="_csrf_token"
                value="{{ csrf_token('authenticate') }}">
         {# If you want to control the URL the user is redirected to on success #}
-        <input type="hidden" name="_target_path" value="/reponse/enigme/un">
+        <input type="hidden" name="_target_path" value="/maths">
 
         <button type="submit">login</button>
     </form>
