--- a/templates/reponse_enigme_un/index.html.twig
+++ b/templates/reponse_enigme_un/index.html.twig
@@ -37,6 +37,7 @@
             <style>
                 .resultatEnigme{
                     display:block;
+                    opacity:100%;
                 }
             </style>
 
@@ -65,6 +66,7 @@
             <style>
                 .resultatEnigme{
                     display:block;
+                    opacity:100%;
                 }
             </style>
         {% endif %}
