--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,7 +52,10 @@
     </main>
 
 
-
+    <div class="figure">
+        <img class="imageAssistante" src="{{ asset('images/assistante2.svg') }}" alt="assistante" height="300px">
+        <img id="assistanteIdeeHome" class="imageAssistanteIdee" src="{{ asset('images/assistanteIdee.svg') }}" alt="assistante" height="300px">
+    </div>
 
 
 
