Changement page WIP

--- a/templates/wip/index.html.twig
+++ b/templates/wip/index.html.twig
@@ -6,9 +6,18 @@
 
     <div class="divWIP">
 
-            <h1 style="color:white">WIP</h1>
+            <h1 style="color:black">WIP</h1>
 
-            <p style="color:white">Work in progress</p>
+            <p style="color:black">Mais au fait, ça sert à quoi le booléen ?
+                Si on prend un composant d'ordinateur, il fonctionne grâce à l'électricité qui permet d'avoir 2 états : alimenté ou non alimenté.
+                Et pour faire des opérations logiques, on utilise des transistors qui permettent de laisser passer ou non le courant en fonction des deux entrées.
+                C'est comme un interrupteur pour allumer ou éteindre la lumière.
+                Avec ces opérations logiques, on peut par la suite composer pas mal de logique notamment au niveau arithmétique.
+                Même si vous ne comprenez pas totalement le fonctionnement des transistors et des opérateurs logiques, ne vous inquiétez pas, vous pouvez quand même programmer sans comprendre exactement comment fonctionnent les composants.
+                Cependant, c'est une technologie qui est présente partout donc le booléen n'est pas si inutile.</p>
+
+
+            <p>Merci d'avoir joué à la version de démonstration d'Enigmatica !!! N'hésitez pas à nous faire vos retours sur mattmarljuju4@gmail.com</p>
     </div>
 
     <div id="black">
