changement mail dans page wip

--- a/templates/wip/index.html.twig
+++ b/templates/wip/index.html.twig
@@ -17,7 +17,7 @@
                 Cependant, c'est une technologie qui est présente partout donc le booléen n'est pas si inutile.</p>
 
 
-            <p>Merci d'avoir joué à la version de démonstration d'Enigmatica !!! N'hésitez pas à nous faire vos retours sur mattmarljuju4@gmail.com</p>
+            <p>Merci d'avoir joué à la version de démonstration d'Enigmatica !!! N'hésitez pas à nous faire vos retours sur contact@erwanbourgeault.live</p>
     </div>
 
     <div id="black">
