--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        <link rel="icon" type="image/svg" href="{{ asset('images/LogoSansNom.svg') }}" />
     </head>
     <body>
 
