changement page de base : register au lieu de home

--- a/templates/wip/index.html.twig
+++ b/templates/wip/index.html.twig
@@ -6,7 +6,7 @@
 
     <div class="divWIP">
 
-            <h1 style="color:black">WIP</h1>
+            <h1 style="color:black">Explications et Remerciements</h1>
 
             <p style="color:black">Mais au fait, ça sert à quoi le booléen ?
                 Si on prend un composant d'ordinateur, il fonctionne grâce à l'électricité qui permet d'avoir 2 états : alimenté ou non alimenté.
