--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -119,6 +119,7 @@ background-color: #999999;
 .figure:hover img.imageAssistanteIdee{
     opacity: 1;
     cursor:pointer;
+    z-index:2;
     //height:110%;
 }
 
